[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.0.0" }
common = { path = "../../common" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
carbon-token = { path = "../carbon-token", features = ["testutils"] }
verification-records = { path = "../verification-records", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
