[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
common = { path = "../../common" }
carbon-token = { path = "../carbon-token" }
escrow = { path = "../escrow" }
