[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.0.0" }
common = { path = "../../common" }
carbon-token = { path = "../carbon-token" }
escrow = { path = "../escrow" }

[features]
testutils = ["soroban-sdk/testutils", "carbon-token/testutils", "escrow/testutils"]
